Add 'blog' module
Add custom element 'blog-post'
Render sample sample blog posts on index.html

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Uber portfolio programisty</title>
 </head>
 <body>
-  
-</body>
+  <blog-post post-id="1" /> </blog-post>
+  <blog-post post-id="2" /> </blog-post>
 </html>
