Add 'about-me' module

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Uber portfolio programisty</title>
 </head>
 <body>
+  <about-me></about-me>
   <blog-post post-id="1" /> </blog-post>
   <blog-post post-id="2" /> </blog-post>
 </html>
