--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <about-me></about-me>
-  <blog-post post-id="1" /> </blog-post>
-  <blog-post post-id="2" /> </blog-post>
+  <blog-post post-id="1"> </blog-post>
+  <blog-post post-id="2"> </blog-post>
 </html>
