Update page structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,15 @@
   <title>Uber portfolio programisty</title>
 </head>
 <body>
-  <about-me></about-me>
-  <blog-post post-id="1"> </blog-post>
-  <blog-post post-id="2"> </blog-post>
+  <section>
+    <img src="assets/me.jpg" alt="Me">
+    <about-me></about-me>
+  </section>
+  <section>
+    <ul>
+      <li>:game_die:</li>
+      <li>:ledger:</li>
+      <li>:joy:</li>
+    </ul>
+  </section>
 </html>
