Fix emoji pics and img size

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <section>
-    <img src="assets/me.jpg" alt="Me">
+    <img src="assets/me.jpg" alt="Me" height="200px">
     <about-me></about-me>
   </section>
   <section>
     <ul>
-      <li>:game_die:</li>
-      <li>:ledger:</li>
-      <li>:joy:</li>
+      <li>🎲</li>
+      <li>📔</li>
+      <li>😂</li>
     </ul>
   </section>
 </html>
