--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,19 @@
   <title>Uber portfolio programisty</title>
 </head>
 <body>
-  <section>
-    <img src="assets/me.jpg" alt="Me" height="200px">
-    <about-me></about-me>
+  <section class="about-me">
+    <div class="containter">
+      <img src="assets/me.jpg" alt="Me" class="my-photo">
+      <about-me></about-me>
+    </div>
   </section>
-  <section>
-    <ul>
-      <li>🎲</li>
-      <li>📔</li>
-      <li>😂</li>
-    </ul>
+  <section class="interactive-content">
+    <div class="container">
+      <ul class="buttons">
+        <li><a href="#!" class="button game">🎲</a></li>
+        <li><a href="#!" class="button blog">📔</a></li>
+        <li><a href="#!" class="button joke">😂</a></li>
+      </ul>
+    </div>
   </section>
 </html>
