--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
     <div class="container">
       <ul class="buttons">
         <li><a href="#!" class="button game">🎲</a></li>
-        <li><a href="#!" class="button blog">📔</a></li>
         <li><a href="#!" class="button joke">😂</a></li>
+        <li><a href="blog/index.html" class="button blog">📔</a></li>
       </ul>
     </div>
   </section>
