--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
       <ul class="buttons">
         <li><a href="#!" class="button game">🎲</a></li>
         <li><a href="#!" class="button joke">😂</a></li>
-        <li><a href="blog/index.html" class="button blog">📔</a></li>
+        <li><a href="blog.html" class="button blog">📔</a></li>
       </ul>
     </div>
   </section>
+  </body>
 </html>
